# srp6-rs

./: Cargo.toml  README.md
examples/: 01_signup.rs  02_authentication.rs
src/: big_number.rs  defaults.rs  hash.rs  lib.rs  primitives.rs  protocol_details.rs
src/api/: host.rs  mod.rs  new_host.rs  new_user.rs  old_host.rs  old_user.rs  user.rs
