[package]
name = "chadehoc-srp6"
version = "0.0.1" # original was 1.0.0.alpha.6
authors = ["Sven Assmann <sven.assmann.it@gmail.com>"]
# original authors = ["Sven Assmann <sven.assmann.it@gmail.com>"]
# and Github user "valpaq".
edition = "2021"
description = "A safe implementation of the secure remote password authentication and key-exchange protocol (SRP version 6 and 6a)"
license = "MIT"
include = ["src", "examples", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
derive_more = { version = "1.0.0", features = ["error", "display"] }
sha-1 = "0.10"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-traits = "0.2"
hex = "0.4"
hex-literal = "0.4.1"
log = { version = "0.4", features = ["release_max_level_warn"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.133"

[features]
default = []
# use this in tests to remove randomness and use the test data
# in RFC 5054 appendix B (only for 1024 version).
norand = []
